--- a/Estilo/layout.css
+++ b/Estilo/layout.css
@@ -7,19 +7,22 @@ body{
 
 .header {
     height: 100px;
-    display: flex;
+   /*  display: flex; */
     align-items: center;
     background: rgb(244,99,69);
     background: linear-gradient(135deg, rgba(244,99,69,1) 0%, rgba(231,66,33,1) 25%, rgba(222,48,14,1) 50%, rgba(195,34,3,1) 70%, rgba(156,36,12,1) 90%, rgba(122,21,1,1) 100%);
     box-shadow: 0px 3px  5px black;
     position: relative;
-
+    
 }
+ 
+
 
 .container{
-    width: 80%;
+    width: 90%;
     /* margin: auto; */
     display: flex;
+    margin-left: 60px;
     
 }
 
@@ -68,6 +71,27 @@ body{
         border:2px solid black;
     }
 
+    .botao {
+        background-color: white;
+        border-radius: 20px;
+        height: 60px;
+        width: 150px;
+        border: none;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 15px;
+        color: rgb(172, 5, 5);
+        font-weight: bolder;
+        margin-left: 110px;
+    }
+    .usuario{ 
+        width: 120px;
+        list-style: none;
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+        color: rgb(255, 255, 255);
+        padding-right: 0px;
+    }
 
     /* inicio banner */
 
@@ -75,13 +99,22 @@ body{
         background-color: rgba(247, 199, 199, 0.897);
         height: 100vh;
         width: 1000px;
-        /* align-items: center; */
         display: flex;
         margin-left: 25vh;
         justify-content: center;
         box-shadow: 0px 3px 5px black;
+        flex-direction: column;
     }
-    
+    .card {
+        background-color: #d9d9d9d2;
+        width: 500px;
+        display: flex;
+        flex-direction: column;
+        margin: 0px;
+        border-radius: 15px;
+        position: relative;
+        padding: 50px;
+    }
 /* fim banner */
 
 /* inicio rodapé */
