--- a/estiloCSS/layout.css
+++ b/estiloCSS/layout.css
@@ -105,7 +105,7 @@ body{
         box-shadow: 0px 3px 5px black;
         flex-direction: column;
     }
-    .card {
+    .calculadora {
         background-color: #d9d9d9d2;
         width: 500px;
         display: flex;
