--- a/estiloCSS/layout.css
+++ b/estiloCSS/layout.css
@@ -61,15 +61,25 @@ body{
     justify-content: space-between;
     color: #ffffff;
     padding: 0;
+    transition: 1s;
     }
 
-    .container .itens-navbar{
-        display: flex;
-        margin-left: 10px;
+    .nav-itens{
+        text-decoration: none;
+        color:#ffffff;
+        
+    }
+    .itens:hover{
+        -webkit-transform:scale(1.50);
+        -ms-transform: scale(1.50);
+        transform:scale(1.50);
+        transition: 1s;
+        
     }
     .itens-navbar{
         border:2px solid black;
     }
+    
 
     .botao {
         background-color: white;
@@ -81,8 +91,21 @@ body{
         font-size: 15px;
         color: rgb(172, 5, 5);
         font-weight: bolder;
-        margin-left: 110px;
+        margin-left: 110px; 
+        transition: 1s;
     }
+    
+    .botao:hover {
+        -webkit-transform:scale(1.10);
+        -ms-transform: scale(1.10);
+        transform:scale(1.10);
+        /* transition: 1s; */
+    }
+    .btn{
+        text-decoration: none;
+        color: rgb(172, 5, 5);
+    }
+   
     .usuario{ 
         width: 120px;
         list-style: none;
@@ -98,12 +121,13 @@ body{
     .banner{
         background-color: rgba(247, 199, 199, 0.897);
         height: 100vh;
-        width: 1000px;
+        width: 60vw;
         display: flex;
-        margin-left: 25vh;
+        margin-left: 40vh;
         justify-content: center;
         box-shadow: 0px 3px 5px black;
         flex-direction: column;
+        
     }
     .calculadora {
         background-color: #d9d9d9d2;
@@ -111,15 +135,14 @@ body{
         display: flex;
         flex-direction: column;
         margin: 0px;
-        border-radius: 15px;
-        position: relative;
+        border-radius: 15px;    
         padding: 50px;
     }
 /* fim banner */
 
 /* inicio rodapé */
 
-.baseboard{
+.baseboard  {
     height: 100px;
     display: flex;
     align-items: center;
