--- a/estiloCSS/layout.css
+++ b/estiloCSS/layout.css
@@ -2,142 +2,151 @@ body{
     margin: 0px ;
     font-family: ecosis;
     background-color: rgb(158, 46, 46);
-    background-image: url(imgs/plano\ de\ fundo.png);
+    background-image: url(../imgs/plano\ de\ fundo.png);
 }
 
 .header {
-    height: 100px;
-   /*  display: flex; */
-    align-items: center;
     background: rgb(244,99,69);
     background: linear-gradient(135deg, rgba(244,99,69,1) 0%, rgba(231,66,33,1) 25%, rgba(222,48,14,1) 50%, rgba(195,34,3,1) 70%, rgba(156,36,12,1) 90%, rgba(122,21,1,1) 100%);
+    height: 13vh;
+    width: 100%;
+    font-weight: bold;
     box-shadow: 0px 3px  5px black;
     position: relative;
-    
 }
  
-
+.header .container {
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .container{
     width: 90%;
-    /* margin: auto; */
     display: flex;
-    margin-left: 60px;
+    margin: auto;
     
 }
 
-.titulo {
-    margin: 0px;
-    color: #ffffff;
-    font-size: 30px;
-    
-    
-
-}
 .icone-logo{
-    color:#ffffff;
-    margin: 0px;
-    text-decoration: none;
-    align-items: center;
+    color:#FFFFFF;
     display: flex;
-    width: 300px;
-    font-size: 25px;
-    padding: 10px;
-}
-
-.header .container {
-
-    height: 100px;
-    justify-content: space-between;
     align-items: center;
-    
+    justify-content: space-between;
+    font-size: 25px;
+    text-decoration: none;
+    margin: 0px;
 }
 
 .navbar{
     width: 500px;
-    list-style: none;
-    align-items: center;
     display: flex;
     justify-content: space-between;
-    color: #ffffff;
-    padding: 0;
+    list-style: none;
+    /* padding: 0; */
+}
+
+.itens{
     transition: 1s;
-    }
+}
 
-    .nav-itens{
-        text-decoration: none;
-        color:#ffffff;
-        
-    }
-    .itens:hover{
-        -webkit-transform:scale(1.50);
-        -ms-transform: scale(1.50);
-        transform:scale(1.50);
-        transition: 1s;
-        
-    }
-    .itens-navbar{
-        border:2px solid black;
-    }
+.itens:hover{
+    -webkit-transform:scale(1.2);
+    -ms-transform: scale(1.2);
+    transform:scale(1.2);
+}
+
+.nav-itens{
+    color:#FFFFFF;
+    text-decoration: none;
+}
+
+.nav-itens:active {
+    color: #AAAAAA;
+}
+
+/* .itens-navbar{
+    border:2px solid black;
+} */
+
+.botao {
+    background-color: white;
+    border-radius: 20px;
+    height: 60px;
+    width: 150px;
+    border: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    color: #AC0505;
+    font-weight: bolder;
+    transition: 1s;
+}
+
+.botao:hover {
+    -webkit-transform:scale(1.10);
+    -ms-transform: scale(1.10);
+    transform:scale(1.10);
+    /* transition: 1s; */
+}
+.btn{
+    text-decoration: none;
+    color: #AC0505;
+}
+
+.login {
+    width: 160px;
+}
+
+.usuario{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    color: #FFFFFF;
+}
+
+/* inicio banner */
+
+.banner{
+    background-color: rgba(247, 199, 199, 0.897);
+    height: 100vh;
+    width: 75%;
+    align-items: center;
+    display: flex;
+    margin: auto;
+    box-shadow: 0px 3px 5px black;
+    flex-direction: column;
     
+}
 
-    .botao {
-        background-color: white;
-        border-radius: 20px;
-        height: 60px;
-        width: 150px;
-        border: none;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size: 15px;
-        color: rgb(172, 5, 5);
-        font-weight: bolder;
-        margin-left: 110px; 
-        transition: 1s;
-    }
-    
-    .botao:hover {
-        -webkit-transform:scale(1.10);
-        -ms-transform: scale(1.10);
-        transform:scale(1.10);
-        /* transition: 1s; */
-    }
-    .btn{
-        text-decoration: none;
-        color: rgb(172, 5, 5);
-    }
-   
-    .usuario{ 
-        width: 120px;
-        list-style: none;
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
-        color: rgb(255, 255, 255);
-        padding-right: 0px;
-    }
+.banner .card {
+    background-color: #FFFFFF;
+    color: #DD0000;
+    height: 450px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+    margin: auto;
+    margin-top: 20px;
+}
 
-    /* inicio banner */
+.card .line{
+    display: flex;
+    justify-content: space-between;
+    width: 93%;
+}
 
-    .banner{
-        background-color: rgba(247, 199, 199, 0.897);
-        height: 100vh;
-        width: 60vw;
-        display: flex;
-        margin-left: 40vh;
-        justify-content: center;
-        box-shadow: 0px 3px 5px black;
-        flex-direction: column;
-        
-    }
-    .calculadora {
-        background-color: #d9d9d9d2;
-        width: 500px;
-        display: flex;
-        flex-direction: column;
-        margin: 0px;
-        border-radius: 15px;    
-        padding: 50px;
-    }
+.calculadora {
+    background-color: #d9d9d9d2;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    border-radius: 15px;    
+    padding: 50px;
+}
 /* fim banner */
 
 /* inicio rodapé */
