--- a/estiloCSS/layout.css
+++ b/estiloCSS/layout.css
@@ -1,35 +1,34 @@
-body{
-    margin: 0px ;
+body {
+    margin: 0px;
     font-family: ecosis;
     background-color: rgb(158, 46, 46);
-    background-image: url(../imgs/plano\ de\ fundo.png);
+    /* background-image: url(../imgs/plano\ de\ fundo.png); */
 }
 
 .header {
-    background: rgb(244,99,69);
-    background: linear-gradient(135deg, rgba(244,99,69,1) 0%, rgba(231,66,33,1) 25%, rgba(222,48,14,1) 50%, rgba(195,34,3,1) 70%, rgba(156,36,12,1) 90%, rgba(122,21,1,1) 100%);
+    background: rgb(244, 99, 69);
+    background: linear-gradient(135deg, rgba(244, 99, 69, 1) 0%, rgba(231, 66, 33, 1) 25%, rgba(222, 48, 14, 1) 50%, rgba(195, 34, 3, 1) 70%, rgba(156, 36, 12, 1) 90%, rgba(122, 21, 1, 1) 100%);
     height: 13vh;
     width: 100%;
     font-weight: bold;
-    box-shadow: 0px 3px  5px black;
+    box-shadow: 0px 3px 5px black;
     position: relative;
 }
- 
+
 .header .container {
     height: 100%;
     justify-content: space-between;
     align-items: center;
 }
 
-.container{
+.container {
     width: 90%;
     display: flex;
     margin: auto;
-    
 }
 
-.icone-logo{
-    color:#FFFFFF;
+.icone-logo {
+    color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -38,7 +37,7 @@ body{
     margin: 0px;
 }
 
-.navbar{
+.navbar {
     width: 500px;
     display: flex;
     justify-content: space-between;
@@ -46,36 +45,55 @@ body{
     /* padding: 0; */
 }
 
-.itens{
+.itens {
     transition: 1s;
 }
 
-.itens:hover{
-    -webkit-transform:scale(1.2);
+.itens:hover {
+    -webkit-transform: scale(1.2);
     -ms-transform: scale(1.2);
-    transform:scale(1.2);
+    transform: scale(1.2);
 }
 
-.nav-itens{
-    color:#FFFFFF;
+.nav-itens {
+    color: #FFFFFF;
     text-decoration: none;
+
+    display: block;
+    position: relative;
+    padding: 0.2em 0;
+    overflow: hidden;
 }
 
 .nav-itens:active {
     color: #AAAAAA;
 }
-
-/* .itens-navbar{
-    border:2px solid black;
-} */
+  
+  /* Fade in */
+  .nav-itens::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.1em;
+    background-color: #770055;
+    transition: transform 300ms;
+    transform: translate(-100%, 0);
+}
+  
+  .nav-itens:hover::after,
+  .nav-itens:focus::after{
+    transform: translate(0, 0);
+  }
 
 .botao {
     background-color: white;
     border-radius: 20px;
-    height: 60px;
+    height: 80%;
     width: 150px;
     border: none;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
     color: #AC0505;
     font-weight: bolder;
@@ -83,12 +101,13 @@ body{
 }
 
 .botao:hover {
-    -webkit-transform:scale(1.10);
+    -webkit-transform: scale(1.10);
     -ms-transform: scale(1.10);
-    transform:scale(1.10);
+    transform: scale(1.10);
     /* transition: 1s; */
 }
-.btn{
+
+.btn {
     text-decoration: none;
     color: #AC0505;
 }
@@ -97,7 +116,7 @@ body{
     width: 160px;
 }
 
-.usuario{
+.usuario {
     list-style: none;
     display: flex;
     justify-content: space-between;
@@ -106,7 +125,7 @@ body{
 
 /* inicio banner */
 
-.banner{
+.banner {
     background-color: rgba(247, 199, 199, 0.897);
     height: 100vh;
     width: 75%;
@@ -115,7 +134,6 @@ body{
     margin: auto;
     box-shadow: 0px 3px 5px black;
     flex-direction: column;
-    
 }
 
 .banner .card {
@@ -132,7 +150,7 @@ body{
     margin-top: 20px;
 }
 
-.card .line{
+.card .line {
     display: flex;
     justify-content: space-between;
     width: 93%;
@@ -144,19 +162,20 @@ body{
     display: flex;
     flex-direction: column;
     margin: 0px;
-    border-radius: 15px;    
+    border-radius: 15px;
     padding: 50px;
 }
+
 /* fim banner */
 
 /* inicio rodapé */
 
-.baseboard  {
+.baseboard {
     height: 100px;
     display: flex;
     align-items: center;
-    background: rgb(244,99,69);
-    background: linear-gradient(315deg, rgba(244,99,69,1) 0%, rgba(231,66,33,1) 25%, rgba(222,48,14,1) 50%, rgba(195,34,3,1) 70%, rgba(156,36,12,1) 90%, rgba(122,21,1,1) 100%);
-    box-shadow: 3px 0px  5px black;
+    background: rgb(244, 99, 69);
+    background: linear-gradient(315deg, rgba(244, 99, 69, 1) 0%, rgba(231, 66, 33, 1) 25%, rgba(222, 48, 14, 1) 50%, rgba(195, 34, 3, 1) 70%, rgba(156, 36, 12, 1) 90%, rgba(122, 21, 1, 1) 100%);
+    box-shadow: 3px 0px 5px black;
     position: relative;
 }
