--- a/estiloCSS/layoutnavteste.css
+++ b/estiloCSS/layoutnavteste.css
@@ -15,16 +15,16 @@ body {
     position: relative;
 }
 
-.header .container {
-    height: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .container {
     width: 90%;
     display: flex;
     margin: auto;
+}
+
+.header .container {
+    height: 100%;
+    /* justify-content: space-between;
+    align-items: center; */
 }
 
 .icone-logo {
@@ -34,16 +34,25 @@ body {
     justify-content: space-between;
     font-size: 25px;
     text-decoration: none;
-    margin: 0px;
 }
 
 .navbar {
-    width: 500px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+}
+
+.nav-box {
+    width: 40%;
     display: flex;
     justify-content: space-between;
     list-style: none;
     /* padding: 0; */
 }
+
 
 .itens {
     transition: 1s;
@@ -122,14 +131,14 @@ body {
 }
 
 .login {
-    width: 160px;
+    width: 120px;
+    display: flex;
+    justify-content: space-between;
+    color: #FFFFFF;
 }
 
 .usuario {
     list-style: none;
-    display: flex;
-    justify-content: space-between;
-    color: #FFFFFF;
 }
 
 /* inicio banner */
