--- a/estiloCSS/layout.css
+++ b/estiloCSS/layout.css
@@ -31,21 +31,21 @@ body {
     color: #FFFFFF;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     font-size: 25px;
-    text-decoration: none;
-    margin: 0px;
+    text-decoration: none;  
 }
 
 .navbar {
     width: 500px;
     display: flex;
+    height: 25px;
+    align-items: center;
     justify-content: space-between;
     list-style: none;
     /* padding: 0; */
 }
 
-.itens {
+/* .itens {
     transition: 1s;
 }
 
@@ -53,67 +53,83 @@ body {
     -webkit-transform: scale(1.2);
     -ms-transform: scale(1.2);
     transform: scale(1.2);
+} */
+
+.nav-item-ativo {
+    color: #CCCCCC !important;
+    pointer-events: none;
+    cursor: default;
+    border-bottom: 2px solid #CCCCCC;
 }
 
 .nav-itens {
     color: #FFFFFF;
     text-decoration: none;
-
-    display: block;
+    display: flex;
     position: relative;
     padding: 0.2em 0;
     overflow: hidden;
 }
 
 .nav-itens:active {
-    color: #AAAAAA;
+    color: #CCCCCC;
 }
   
-  /* Fade in */
-  .nav-itens::after {
+/* Fade in */
+.nav-itens::after {
     content: '';
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 0.1em;
-    background-color: #770055;
+    background-color: #FFFFFF;
     transition: transform 300ms;
     transform: translate(-100%, 0);
 }
   
-  .nav-itens:hover::after,
-  .nav-itens:focus::after{
+.nav-itens:hover::after,
+.nav-itens:focus::after{
     transform: translate(0, 0);
-  }
+}
 
-.btn-simulador {
-    background-color: white;
-    border-radius: 20px;
-    height: 80%;
+.nav-btn {
+    background-color: #FFFFFF;
+    height: 60%;
     width: 150px;
-    border: none;
+    color: #AC0505;
     font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
-    color: #AC0505;
     font-weight: bolder;
+    text-decoration: none;
+    border-radius: 20px;
+    display: flex;
+    text-align: center;
+    align-items: center;
     transition: 1s;
 }
 
-.btn-simulador:hover {
-    /* -webkit-transform: scale(1.10);
-    -ms-transform: scale(1.10); */
+.nav-btn:hover {
+    -webkit-transform: scale(1.10);
+    -ms-transform: scale(1.10);
     transform: scale(1.10);
-    /* transition: 1s; */
 }
 
-.btn-simulador:active {
+.nav-btn:active {
     background-color: #AC0505;
     color: #FFFFFF;
-    /* -webkit-transform: scale(1);
-    -ms-transform: scale(1); */
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
     transform: scale(1);
     transition: 0.3s;
+}
+
+.nav-btn-ativo {
+    background-color: #690505 !important;
+    color: #FFFFFF !important;
+    border: #FFFFFF solid 3px;
+    pointer-events: none;
+    cursor: default;
 }
 
 .btn {
@@ -166,7 +182,7 @@ body {
 }
 
 .calculadora {
-    background-color: #d9d9d9d2;
+    background-color: #C0C0C0;
     width: 500px;
     display: flex;
     flex-direction: column;
