--- a/dashboard/pasta de test/css/layout.css
+++ b/dashboard/pasta de test/css/layout.css
@@ -163,6 +163,10 @@ body{
     flex-direction: column;
 }
 
+#banner-dashboard {
+    align-items: center;
+}
+
 .banner .container {
     height: 100%;
     flex-direction: column;
@@ -448,7 +452,36 @@ body{
 
 /*banner tela de login-inicio*/
 
+/* inicio do grafico */
+.dash-header h1 {
+    text-align: center;
+}
+.btn-dash{
+    margin-top: 35px;
+    display: flex;
 
+}
+
+.btn-chart{
+    width: 15%;
+}
+.div-dash1{
+    display: flex;
+    margin-bottom: 50px;
+    justify-content: space-evenly;
+    text-align: center;
+}
+.div-dash2{
+    margin-top: 150px ;
+}
+
+
+.grafico{
+    width: 38vw;
+    background-color: #AAAAAA;
+    border-radius: 15px;
+    
+}
 
     
 /* fim banner */
